2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py:
	  Make sure the workers directory exists.

2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/check.py:
	  Fix pychecker error.

2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/check.py:
	  add a generic checkPlugin method to be used in checks

2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  Checks are responsible for adding error messages to the component.
	  Fixes those pesky bogus component setup error messages without
	  info.

2007-03-08  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  Work around a pychecker bug so I can run pychecker again.
	  
2007-03-08  Michael Smith  <msmith@fluendo.com>

	* flumotion/twisted/fdserver.py:
	  Backwards compatibility for FDClient; accept messages without our
	  special magic cookie.

2007-03-08  Michael Smith  <msmith@fluendo.com>

	* flumotion/worker/worker.py:
	  WorkerBrain now only binds sockets in listen(), not in __init__,
	  which returns False if it fails.
	  Make sure various functions don't fail if we didn't call listen()

	* flumotion/worker/main.py:
	  Create WorkerBrain and call listen() on it before daemonizing.
	  If listen() fails, print an error and exit; this is fatal.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/worker/worker.py:
	  After some timeout (this should be made configurable somehow), if
	  a job has refused to shut down, SIGKILL it.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/disker/disker.py:
	  Rename file_fd to file; it's not an fd.
	  Where we claim to close the file, close it.
	  Don't call reactor methods from non-reactor threads; use
	  callFromThread.

2007-03-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py: