@@ -1,3 +1,9 @@
+2007-03-12  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/common/netutils.py:
+	  Add function getRouteNames() to get a list of all named routes in
+	  the RoutingTable.
+
 2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/service/service.py:
